[package]
name = "smoot"
version = "0.1.0"
edition = "2024"

[lib]
name = "smoot"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[dependencies]
bitcode = { version = "0.6.5", features = ["serde"] }
mimalloc = "0.1.43"
numpy = "0.24.0"
pyo3 = "0.24.1"
smoot-rs = { path = "./smoot-rs" }
