[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "smoot"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "typing_extensions>=4.12.2",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff~=0.11.1",
    "mypy~=1.15.0",
    "pytest~=8.3.5",
    "hypothesis~=6.131.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
sdist-include = ["smoot/data/*"]
