[package]
name = "smoot-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false

[dependencies]
bitcode = { version = "0.6.5", features = ["serde"] }
itertools = "0.14.0"
num-traits = "0.2.19"
ndarray = "0.16.1"
peg = "0.8.5"
thiserror = "2.0.11"
hashable = { path = "../hashable" }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rustc-hash = "2.1.1"

[dev-dependencies]
test-case = "3.3.1"
